# Fig-Nodes

./: .env.example  .gitignore  AI_ANALYSIS_CAPABILITY_ASSESSMENT.md  CHANGELOG.md  CHANGES_UPDATED_CRYPTO_BARS_CURRENT.md  CHART_ANALYSIS_PROMPT.md  CHART_ANALYSIS_PROMPT.txt  CLOUD_MIGRATION_IMPLEMENTATION_GUIDE.md  CLOUD_UI_ARCHITECTURE_ANALYSIS.md  DATA_SUMMARIZATION_PROMPT.txt  DEVIATION_MAGNET_VISUAL_GUIDE.md  DEVIATION_MAGNET_VS_SQUEEZE_EXPANSION_COMPARISON.md  Dockerfile  EASY_COPY_PROMPT.txt  GREEN_EXPANSION_RISING_FILTER_MODES_EXPLANATION.md  GREEN_EXPANSION_RISING_FILTER_NODE.md  HYBRID_UI_README.md  IMAGE_DISPLAY_NODE_README.md  IMPROVED_CHART_ANALYSIS_PROMPT.md  INDICATOR_COMPATIBILITY_GUIDE.md  LICENSE  NODE_DISPLAY_PERFORMANCE_FIX.md  OLLAMA_VISION_MODE_GUIDE.md  PERFORMANCE_PROFILING_AND_TESTING_SUMMARY.md  PHASE2_TYPE_SAFETY_SUMMARY.md  POLYGON_DATA_INCONSISTENCY_README.md  POLYGON_STOCK_UNIVERSE_OTC_ETF_FIX.md  PROGRESS_AGAINST_RECOMMENDATIONS.md  QWEN_MODELS_RECOMMENDATIONS.md  README.md  SYSTEM_IMPROVEMENTS_BENEFITS.md  TEST_FIXES_COMPLETE.md  TEST_FIXES_SUMMARY.md  TEST_STATUS_AND_NEXT_STEPS.md  TYPE_SAFETY_AUDIT.md  TYPE_SAFETY_IMPLEMENTATION_SUMMARY.md  YELLOW_DIAMOND_RELEASE_EXPLANATION.md  compare_tradingview_rvol.py  corrected_vbp_logic.py  debug_graph.py  (+28 more)
.stash-backup/: mesa_stochastic_calculator.py
backend/: package.json  tsconfig.json
config/: settings.py
core/: __init__.py  api_key_vault.py  bot.py  graph_executor.py  node_registry.py  serialization.py  types_registry.py  types_utils.py
cursor_project_rules/: implementation-plan.mdc
custom_nodes/: web_search_api_key_node.py
data_provider/: data_provider.py
docs/: API.md  DISCORD_SETUP.md  DuplicateSymbolFilter.md  KucoinTraderNode.md  VBPLevelFilter.md  index.md  ollama-api.md  open-router-api.md  open-router-get-generation.md  open-router-tool-calling.md
examples/: default-graph.json  workflow1.json
fignode-litegraph.js/: package.json
frontend/: README.md  app.ts  index.html  main.ts  package.json  style.css  tsconfig.json  vite.config.ts  websocket.ts
frontend-react/: FIXES_APPLIED.md  LOGGING_EXPLAINED.md  README.md  TROUBLESHOOTING.md  UX_IMPROVEMENTS.md  index.html  package.json  tsconfig.json  vite.config.ts
indicators/: indicators_service.py
legacy/: main.py  pyrightconfig.json
models/: settings.py
nodes/: __init__.py  action_nodes.py  adx-filter-node.ts  asset-symbol-input-node.ts  atr-calculator.ts  atr-filter-node.ts  atr-indicator-node.ts  atrx-filter-node.ts  atrx-indicator-node.ts  base-indicator-filter.ts  base_data_service_node.py  base_node.py  binance_data_provider_node.py  data_provider_nodes.py  data_source_nodes.py  input_nodes.py  (+51 more)
(+667 files in other folders)
