[tool.poetry]
name = "Fig Node"
version = "0.1.0"
description = "Node based UI for LLM-enhanced trading and financial analysis workflows"
authors = ["Guanzhi Ma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pandas = "^2.3.1"
numpy = "^1.26.4"
scipy = "^1.11.0"
requests = "^2.32.4"
websockets = "^10.0"
hyperliquid-python-sdk = "^0.17.0"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
uvicorn = "^0.35.0"
networkx = "^3.5"
httpx = "^0.27.2"
ollama = "^0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"