[tool.poetry]
name = "fig-node"
version = "0.1.0"
description = "Agentic finance and trading workflow nodes"
authors = ["Volatility Labs Inc."]
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "core" },
  { include = "custom_nodes" },
  { include = "nodes" },
  { include = "services" },
  { include = "ui" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "1.1.1"
pandas = "2.3.1"
numpy = "1.26.4"
scipy = "1.16.1"
requests = "2.32.4"
websockets = "10.4"
hyperliquid-python-sdk = "0.17.0"
fastapi = "0.116.1"
pydantic = "2.11.7"
uvicorn = "0.35.0"
networkx = "3.5"
httpx = "0.27.2"
ollama = "0.5.3"
ta = "0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "1.1.0"
pytest-cov = "6.2.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


