[project]
name = "fig-node"
version = "0.1.0"
description = "Agentic finance and trading workflow nodes"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
  { name = "Volatility Labs Inc." }
]
license = { text = "Apache-2.0" }
dependencies = [
  "python-dotenv==1.1.1",
  "pandas==2.3.1",
  "pandas-stubs>=2.0.0",
  "numpy==1.26.4",
  "scipy==1.16.1",
  "requests==2.32.4",
  "websockets==10.4",
  "hyperliquid-python-sdk==0.17.0",
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "uvicorn==0.35.0",
  "networkx==3.5",
  "httpx==0.27.2",
  "aiohttp==3.10.11",
  "ollama==0.5.3",
  "ta==0.11.0",
  "matplotlib==3.9.2",
  "rustworkx>=0.17.1",
  "pytz>=2025.2",
  "ccxt>=4.5.17",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "ruff==0.9.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "nodes*", "services*", "server*", "ui*"]
